--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,12 +25,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
         android:alpha="1"
-        android:text="Enter City Name"
+        android:text="Enter City/Region Name"
         android:textColor="#FFFFFF"
-        android:textSize="36sp"
+        android:textSize="30sp"
+        app:fontFamily="@font/kadwa"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
@@ -78,6 +79,7 @@
         android:layout_marginTop="25dp"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
+        app:fontFamily="@font/telex"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
